tests/baselines/reference/errorOnInitializerInInterfaceProperty.errors.txt
errorOnInitializerInInterfaceProperty.ts(2,19): error TS1246: An interface property cannot have an initializer.


==== errorOnInitializerInInterfaceProperty.ts (1 errors) ====
    interface Foo {
        bar: number = 5;
                      ~
!!! error TS1246: An interface property cannot have an initializer.
    }
    